--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -198,6 +198,12 @@ body{
   padding: 16px;
 }
 
+.page-container {
+  position: absolute;
+  left: 0px; right: 0px; bottom: 0px; top: 0px;
+  overflow-y: auto;
+  padding: 16px;
+}
 .video-player-container {
   position: absolute;
   left: 0px; right: 0px; top: 0px;
