--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -486,7 +486,7 @@ word, word:active, word:focus{
 }
 .video-overlay-menu-right {
   position: absolute;
-  right: 0px;
+  left: 58px;
   top: 8px;
   cursor: pointer;
   list-style-type: none;
@@ -501,8 +501,11 @@ word, word:active, word:focus{
 .video-overlay-menu:hover, .video-overlay-menu-right:hover {
   opacity: 1;
 }
+.video-overlay-menu-right li {
+  display: inline-block;
+}
 .video-overlay-menu li, .video-overlay-menu-right li{
-  padding: 8px 15px;
+  padding: 3px 15px;
   letter-spacing: 0;
   color: #ccc;
   text-shadow: 0 0 3px rgba(0,0,0,0.7);
@@ -512,6 +515,7 @@ word, word:active, word:focus{
 }
 .video-overlay-menu .info-text, .video-overlay-menu-right .info-text {
   margin-top: -5px;
+  margin-bottom: 3px;
   font-size: 8px;
   font-weight: 300;
 }
