--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -179,6 +179,7 @@ body{
   background-color: rgba(0,0,0,0.15);
   /* box-shadow: 0 0 5px 0 rgba(0,0,0,0.50); */
   border-radius: 4px;
+  height: 95px;
 }
 
 .header .translate-direction .arrow{
@@ -186,9 +187,16 @@ body{
   padding: 0 8px;
 }
 
+.main-content {
+  position: absolute;
+  bottom: 0px; top: 95px;
+  width: 600px;
+}
+
 .current-page-container {
   position: relative;
   height: 100%;
+  /* border: 14px #ccc solid; */
 }
 
 .article-container {
@@ -201,7 +209,7 @@ body{
 .page-container {
   position: absolute;
   left: 0px; right: 0px; bottom: 0px; top: 0px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   padding: 16px;
 }
 .video-player-container {
@@ -312,6 +320,19 @@ body{
 .suggestion.higlited {
   color: black;
   /* background-color: rgba(0,0,0,0.05); */
+}
+
+.elements-container {
+  /* border: 1px rgba(0,0,0,0.1) solid; */
+}
+
+.element {
+  display: flex;
+	color:rgba(0,0,0,0.8);
+	font-size: 16px;
+	cursor: pointer;
+  padding: 10px;
+  border-bottom: 1px rgba(0,0,0,0.1) solid;
 }
 
 .search-results-results .results .one-result{}
@@ -520,9 +541,21 @@ word, word:active, word:focus{
 
 h1, .page-title {
 	font-size: 24px;
-  margin: 35px 0;
+  margin: 5px 0px 20px 0px;
 	color: rgba(0,0,0,0.8);
-  text-align: center;
+  text-align: left;
+	font-family: Roboto;
+	font-weight: 500;
+	line-height: 26px;
+  text-decoration: underline;
+  text-decoration-color: rgba(0,0,0,0.1);
+  text-decoration-style: solid;
+}
+
+h2 {
+	font-size: 24px;
+	color: rgba(0,0,0,0.8);
+  text-align: left;
 	font-family: Roboto;
 	font-weight: 500;
 	line-height: 26px;
