--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -46,7 +46,6 @@ html, body {
 }
 
 html {
-  height: 100%;
   box-sizing: border-box;
 }
 
@@ -61,16 +60,6 @@ body{
   box-sizing: inherit;
 }
 
-.layout-container {
-  position: fixed; left: 0px; right: 0px; bottom: 0px; top: 0px;
-  padding: 22px 0;
-  display: flex;
-  margin: 0px;
-  padding: 0px;
-  align-items: stretch;
-  align-content: stretch;
-}
-
 .left-column {
   background-color: rgba(0,0,0,0.3);
   flex-grow: 1;
@@ -81,11 +70,22 @@ body{
   flex-grow: 1;
 }
 
+.layout-container {
+  position: fixed; left: 0px; right: 0px; bottom: 0px; top: 0px;
+  padding: 22px 0;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+
 .layout-main {
   width: 600px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 0 25px 0 rgba(0,0,0,0.1);
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
 .header {
@@ -176,7 +176,6 @@ body{
   padding: 2px 8px;
   color: white;
   background-color: rgba(0,0,0,0.15);
-  /* box-shadow: 0 0 5px 0 rgba(0,0,0,0.50); */
   border-radius: 4px;
   height: 95px;
 }
@@ -186,36 +185,27 @@ body{
   padding: 0 8px;
 }
 
-.main-content {
-  position: absolute;
-  bottom: 0px; top: 95px;
-  width: 600px;
-}
-
 .current-page-container {
-  position: relative;
-  height: 100%;
-  /* border: 14px #ccc solid; */
+  align-self: stretch;
+  border: 4px #ccc solid;
+  flex-grow: 1;
 }
 
 .article-container {
-  position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 0px;
   overflow-y: auto;
   padding: 16px;
 }
 
 .page-container {
-  position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 0px;
-  /* overflow-y: auto; */
+  overflow-y: auto;
   padding: 16px;
 }
+
 .video-player-container {
-  position: absolute;
-  left: 0px; right: 0px; top: 0px;
+  position: relative;
   background-color: black;
   height: 340px;
+  width: 600px;
   overflow: hidden;
 }
 
@@ -277,31 +267,33 @@ body{
 .overlay-video-info:visited {
   color: rgba(255,255,255,0.6);
 }
-.search-container {
-  position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 0px;
-}
 
-.search-content {
-  position: relative; height: 100%; width: 100%;
+.search-container {
+  display: flex;
+  align-items: stretch;
+  flex-grow: 1;
+  width: 600px;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .search-ui-container {
-  position: absolute;
-  left: 0px; right: 0px; top: 340px;
+  width: 600px;
   height: 66px;
+  display: flex;
+}
+
+.search-bottom-containter {
+  flex-grow: 1;
+  align-items: stretch;
+  overflow-y: auto;
 }
 
 .search-results-container {
-  position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 406px;
-  overflow-y: auto;
 }
 
 .suggestions-container {
-  position: absolute;
-  left: 10px; right: 10px; bottom: 0px; top: 400px;
-  overflow-y: auto;
+  flex-grow: 1;
   padding: 0px 15px;
   border: 1px #ccc solid;
 }
@@ -405,16 +397,16 @@ word, word:active, word:focus{
 
 .lang-in-circle{
 	display: inline-block;
-	width:20px;
-	height:20px;
-	border-radius:9px;
-	font-size:14px;
+	width: 20px;
+	height: 20px;
+	border-radius: 9px;
+	font-size: 14px;
 	color:#ccc;
 	font-weight: bold;
-	line-height:18px;
-	text-align:center;
+	line-height: 18px;
+	text-align: center;
 	text-transform: lowercase;
-	background:rgba(0,0,0,0.03);
+	background: rgba(0,0,0,0.03);
 }
 
 .lang-in-circle.heart {
@@ -437,7 +429,8 @@ word, word:active, word:focus{
 }
 
 .filters-container {
-  position: relative; height: 100%;
+  width: 600px;
+  position: relative;;
   padding: 10px;
 }
 
