--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -9,6 +9,12 @@
 	outline: none !important;
 }
 
+
+* {
+  /* backface-visibility: hidden; */
+  /* -webkit-font-smoothing: antialiased; */
+}
+
 textarea:focus, input:focus{
   outline: none;
 }
