--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -4,6 +4,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	  <meta name="viewport" content="width=600,user-scalable=no">
     <title>PlayPhrase.me: Endless stream of movie clips of specific phrases (<%- phrase ? phrase.text : "" %>)</title>
+	  <meta name="google-site-verification" content="MhTRfnejZ0JQzlv5U0Uk3cd7gwp5zPp6_ESyEYZJy4w" />
+
+   <meta property="fb:app_id" content="{{ facebook-app-id }}" />
+	  <meta name="twitter:site" content="@playphraseme">
+	  <meta name="twitter:title" content="Playphrase.me">
+
+	  <meta property="og:title" content="Playphrase.me">
+	  <meta property="og:locale" content="en_US">
   </head>
   <body>
 
