--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -40,17 +40,14 @@
     </script>
     {% script "/js/app.js" %}
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56061701-1"></script>
     <script>
-	   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
 
-	   ga('create', 'UA-56061701-1', 'auto');
-
-	  </script>
-
-    <script async src="https://static.addtoany.com/menu/page.js"></script>
+     gtag('config', 'UA-56061701-1');
+    </script>
 
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
