--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	  <meta name="viewport" content="width=600,user-scalable=no">
-    <title>PlayPhrase.me: Endless stream of movie clips of specific phrases (<%- phrase ? phrase.text : "" %>)</title>
+    <title>PlayPhrase.me: Endless stream of movie clips of specific phrases</title>
 	  <meta name="google-site-verification" content="MhTRfnejZ0JQzlv5U0Uk3cd7gwp5zPp6_ESyEYZJy4w" />
 
    <meta property="fb:app_id" content="{{ facebook-app-id }}" />
