--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -591,7 +591,7 @@ word, word:active, word:focus{
   opacity: 0;
 }
 .video-overlay-menu i {
-  font-size: 22px;
+  font-size: 33px;
 }
 .stopped .video-overlay-menu {
   opacity: 1;
@@ -786,6 +786,15 @@ h2 {
   }
   .overlay-play-icon-bottom {
     display: block;
+  }
+  .video-overlay-menu {
+    margin: 8px 10px;
+  }
+  .video-overlay-menu i {
+    font-size: 45px;
+  }
+  .video-overlay-menu .info-text {
+    font-size: 14px;
   }
 }
 
