--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -524,10 +524,22 @@ word, word:active, word:focus{
 	font-size: 18px;
 	height: 46px;
   padding-left: 12px;
+  background: transparent !important;
 }
 
 .filter-input::placeholder {
   color: rgba(0,0,0,0.3);
+}
+
+.next-word-suggestion {
+  position: absolute;
+  box-sizing: border-box;
+  top: 21px; left: 23px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: rgba(0,0,0,0.3);
+  cursor: text;
 }
 
 .filter-input:focus {
