--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -351,13 +351,13 @@ form h1 {
 
 .search-results-container {
   position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 406px;
+  left: 0px; right: 0px; bottom: 0px; top: 420px;
   overflow-y: auto;
 }
 
 .suggestions-container {
   position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 406px;
+  left: 0px; right: 0px; bottom: 0px; top: 420px;
   overflow-y: auto;
   padding: 0px 15px;
   border: 1px #ccc solid;
@@ -531,6 +531,32 @@ word, word:active, word:focus{
   color: rgba(0,0,0,0.3);
 }
 
+.shortcuts-info {
+  display: flex;
+  flex-direction: row;
+  font-size: 10px;
+  color: rgba(0,0,0,0.5);
+  margin-top: 4px;
+  align-items: center;
+  padding-left: 4px;
+}
+.shortcuts-info:hover {
+  color: rgba(0,0,0,0.7);
+}
+.shortcuts-info div {
+  margin-right: 2px;
+}
+.shortcuts-info i{
+  font-size: 16px;
+  margin-right: 6px;
+}
+
+.filter-input:focus {
+	border-color: #66afe9 !important;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
+}
+
 .next-word-suggestion {
   position: absolute;
   box-sizing: border-box;
@@ -540,12 +566,6 @@ word, word:active, word:focus{
   line-height: 24px;
   color: rgba(0,0,0,0.3);
   cursor: text;
-}
-
-.filter-input:focus {
-	border-color: #66afe9 !important;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
 }
 
 .search-result-count{
@@ -741,7 +761,11 @@ h2 {
   display: none;
 }
 
+
 @media only screen and (max-device-width: 800px) and (orientation : portrait){
+  .search-ui-container {
+    top: 406px;
+  }
   .header-button {
     padding: 8px 12px;
     font-size: 16px;
@@ -815,6 +839,9 @@ h2 {
   .video-overlay-menu .info-text {
     font-size: 14px;
   }
+  .shortcuts-info {
+    display: none;
+  }
 }
 
 @media only screen and (max-device-width : 800px) and (orientation : landscape){
@@ -880,5 +907,8 @@ h2 {
   }
   .ios .overlay-logo {
     display: block;
+  }
+  .shortcuts-info {
+    display: none;
   }
 }
