--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -554,6 +554,32 @@ word, word:active, word:focus{
   /* margin-right: 6px; */
 }
 
+.common-phrases {
+  display: flex;
+  flex-direction: row;
+  font-size: 10px;
+  color: rgba(0,0,0,0.4);
+  margin-top: 5px;
+  align-items: center;
+  padding-left: 5px;
+  margin-right: 5px;
+  flex-wrap: nowrap;
+  overflow: hidden;
+	transition: opacity 0.4s ease-in-out;
+}
+.common-phrases .one-common-phrase {
+  padding-right: 6px;
+  flex-wrap: nowrap;
+  color: rgba(0,0,0,0.4);
+  text-decoration: underline !important;
+	white-space: nowrap;
+}
+
+.common-phrases .one-common-phrase:hover {
+  color: rgba(0,0,0,0.9);
+	white-space: nowrap;
+}
+
 .filter-input:focus {
 	border-color: #66afe9 !important;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
