--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -641,7 +641,7 @@ word, word:active, word:focus{
   position: absolute;
   width: 50px;
   left: 10px;
-  top: 12px;
+  bottom: 12px;
   bottom: 12px;
   cursor: pointer;
   list-style-type: none;
@@ -655,10 +655,7 @@ word, word:active, word:focus{
   font-size: 24px;
 }
 .stopped .video-overlay-menu {
-  opacity: 1;
-}
-.video-player-container:hover .video-overlay-menu {
-  opacity: 1;
+  opacity: 0.7;
 }
 .video-overlay-menu-right li {
   display: inline-block;
