image for mobile

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1005,3 +1005,13 @@ img.app-button {
 .mobile-app-page .logo .red {color: red}
 .mobile-app-page .logo .black {color: black}
 .mobile-app-page .logo .gray {color: gray}
+
+@media only screen and (max-device-width: 800px) and (orientation : portrait) {
+  .mobile-app-page  li {
+    font-size: 28px;
+  }
+  .mobile-app-page h2 {
+    font-size: 33px;
+    padding: 18px;
+  }
+}
