--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -74,12 +74,10 @@ body{
 }
 
 .left-column {
-  background-color: rgba(0,0,0,0.3);
   flex-grow: 1;
 }
 
 .right-column {
-  background-color: rgba(0,0,0,0.3);
   flex-grow: 1;
 }
 
@@ -107,7 +105,7 @@ form h1 {
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  background-color: white;
+  background-color: rgba(0,0,0,0.3);
 }
 
 .layout-main {
@@ -116,6 +114,7 @@ form h1 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  background-color: white;
 }
 
 .header {
@@ -224,6 +223,7 @@ form h1 {
 .article-container {
   overflow-y: auto;
   padding: 16px;
+  background-color: white;
 }
 
 .page-container {
@@ -231,6 +231,7 @@ form h1 {
   position: absolute;
   left: 0px; right: 0px; bottom: 0px; top: 0px;
   overflow-y: auto;
+  background-color: white !important;
 }
 
 .video-player-container {
@@ -1014,5 +1015,8 @@ img.app-button {
   .mobile-app-page h2 {
     font-size: 33px;
     padding: 18px;
+  }
+  .mobile-app-page h5 {
+    font-size: 28px;
   }
 }
