new mobile page

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -31,7 +31,9 @@
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
+      rel="stylesheet">
+
+    <script src="https://wzrd.in/standalone/copy-to-clipboard@latest" async></script>
 
     <script src="/js/iphone-inline-video.min.js"></script>
 
