--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -433,14 +433,22 @@ form h1 {
 	cursor: pointer;
 	padding: 3px;
 	outline: none;
-
-	/*font-family: 'Roboto';*/
-	/*font-weight: 400;*/
+  display: inline;
 }
 
 word, word:active, word:focus{
 	outline:none !important;
 	border: none;
+}
+
+.karaoke .copy-icon {
+  display: none;
+  align-items: center;
+}
+
+.karaoke:hover .copy-icon {
+	cursor: pointer;
+  display: flex;
 }
 
 .s-word-searched {
@@ -1006,9 +1014,14 @@ img.app-button {
 }
 .mobile-app-page .logo {
   background-color: rgba(0,0,0,0.1);
-  display: inline-block;
   padding: 4px;
 }
+.mobile-app-page .no-wrap{
+  display: inline-block;
+  padding-right: 20px;
+  white-space: nowrap;
+}
+
 .mobile-app-page .logo .red {color: red}
 .mobile-app-page .logo .black {color: black}
 .mobile-app-page .logo .gray {color: gray}
