--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	  <meta name="viewport" content="width=600,user-scalable=no">
     <title>PlayPhrase.me: Endless stream of movie clips of specific phrases</title>
-	  <meta name="google-site-verification" content="MhTRfnejZ0JQzlv5U0Uk3cd7gwp5zPp6_ESyEYZJy4w" />
-
-   <meta property="fb:app_id" content="{{ facebook-app-id }}" />
+	  <!-- <meta name="google-site-verification" content="MhTRfnejZ0JQzlv5U0Uk3cd7gwp5zPp6_ESyEYZJy4w" /> -->
+    <meta name="google-site-verification" content="Y0UnA_-WvGLPD-d1ctaHnwJ2q2yzb8wdqgJbKHPJCUw" />
+    <meta property="fb:app_id" content="{{ facebook-app-id }}" />
 	  <meta name="twitter:site" content="@playphraseme">
 	  <meta name="twitter:title" content="Playphrase.me">
 
