--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -18,7 +18,7 @@
 
     <div id="app">
       <!-- static content here -->
-      {{static-content}}
+      {{page-static-content|safe}}
     </div>
 
     <!-- scripts and styles -->
@@ -44,7 +44,7 @@
      var context = "{{servlet-context}}";
      var csrfToken = "{{csrf-token}}";
      var searchOnMobile = {{search-on-mobile}}; 
-     var searchedPhrase = "{{searched-phrase}}"; 
+     var searchedPhrase = "{{searched-phrase|safe}}"; 
     </script>
     {% script "/js/app.js" %}
 
