--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -9,10 +9,13 @@
     <meta name="google-site-verification" content="Y0UnA_-WvGLPD-d1ctaHnwJ2q2yzb8wdqgJbKHPJCUw" />
     <meta property="fb:app_id" content="{{ facebook-app-id }}" />
 	  <meta name="twitter:site" content="@playphraseme">
-	  <meta name="twitter:title" content="Playphrase.me">
-
-	  <meta property="og:title" content="Playphrase.me">
+	  <meta name="twitter:title" content="{{page-title}}">
+	  <meta name="twitter:description" content="{{page-description}}">
+	  <meta property="og:title" content="{{page-title}}">
+	  <meta property="og:description" content="{{page-description}}">
 	  <meta property="og:locale" content="en_US">
+    <meta content="Playphraseme" name="apple-mobile-web-app-title">
+    <meta content="yes" name="apple-mobile-web-app-capable">
   </head>
   <body>
 
