--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -18,6 +18,9 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
   </head>
   <body>
+    <div id="static-content">
+      {{page-static-content|safe}}
+    </div>
 
     <div id="app">
       <!-- static content here -->
