--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -16,6 +16,7 @@
 	  <meta property="og:locale" content="en_US">
     <meta content="Playphraseme" name="apple-mobile-web-app-title">
     <meta content="yes" name="apple-mobile-web-app-capable">
+    {{rel-canonical|safe}}
   </head>
   <body>
     <div id="static-content">
