--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -19,10 +19,6 @@
     {{rel-canonical|safe}}
   </head>
   <body>
-    <div id="static-content">
-      {{page-static-content|safe}}
-    </div>
-
     <div id="app">
       <!-- static content here -->
       {{page-static-content|safe}}
@@ -43,7 +39,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-    <script src="https://wzrd.in/standalone/copy-to-clipboard@latest" async></script>
+    <!-- <script src="https://wzrd.in/standalone/copy-to-clipboard@latest" async></script> -->
 
     <script src="/js/iphone-inline-video.min.js"></script>
 
