--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -422,6 +422,11 @@ form h1 {
 .karaoke {
   display: flex;
   flex-wrap: wrap;
+  text-decoration: none !important;
+}
+
+.karaoke:hover {
+  text-decoration: none !important;
 }
 
 /* -------------- */
@@ -1039,11 +1044,6 @@ img.app-button {
   }
   .white-text {color: white;}
 }
-#static-content {
-  overflow:hidden;
-  width: 1px;
-  height: 1px;
-  position: fixed;
-  top: 0px;
-  height: 0px;
+.static-content {
+  color: rgba(0,0,0,0.05);
 }
