--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -19,6 +19,8 @@
     {{rel-canonical|safe}}
   </head>
   <body>
+    <div id="loadOverlay" style="background-color:#333; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
+
     <div id="app">
       <!-- static content here -->
       {{page-static-content|safe}}
