--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -286,6 +286,17 @@ form h1 {
   opacity: 0.3;
 }
 
+.overlay-play-icon-bottom {
+  display: none;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  opacity: 0.4;
+}
+.overlay-play-icon-bottom .material-icons {
+  font-size: 225px;
+}
+
 .audio-control {
   padding-top: 4px;
   font-size: 18px !important;
