google search optimizations

--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -11,6 +11,13 @@
 	  <meta name="twitter:site" content="@playphraseme">
 	  <meta name="twitter:title" content="{{page-title}}">
 	  <meta name="twitter:description" content="{{page-description}}">
+
+    <meta property="og:video:type" content="video/mp4">
+	  <meta property="og:video:url" content="{{video-url|safe}}">
+	  <meta property="og:video:secure_url" content="{{video-url|safe}}">
+	  <meta property="og:video:width" content="640">
+	  <meta property="og:video:height" content="360">
+
 	  <meta property="og:title" content="{{page-title}}">
 	  <meta property="og:description" content="{{page-description}}">
 	  <meta property="og:locale" content="en_US">
